--- a/README.org
+++ b/README.org
@@ -42,6 +42,14 @@ its content.
 
 ** Diciembre 2022
 
+*** 17-Dic-22
++ [[https://arxiv.org/abs/2212.06956][Verifying term graph optimizations using Isabelle/HOL]]. ~ Brae J. Webb, Ian J. Hayes, Mark Utting. #ITP #IsabelleHOL
++ [[https://www.isa-afp.org/browser_info/current/AFP/Quantifier_Elimination_Hybrid/document.pdf][A first complete algorithm for real quantifier elimination in Isabelle/HOL]]. ~ Katherine Cordwell, Yong Kiam Tan, André Platzer. #ITP #IsabelleHOL #Logic #Math
++ [[https://www.researchgate.net/publication/366177699_Real_quantifier_elimination_in_the_classroo][Real quantifier elimination in the classroom]]. ~ Zoltán Kovács, Tomás Recio.m#Logic #Math #GeoGebra
++ [[https://gilmi.me/blog/post/2022/12/13/learned-from-haskell][7 things I learned from Haskell]]. ~ Gil Mizrahi (@_gilmi).  #Haskell #FunctionalProgramming
++ [[https://serokell.io/blog/haskell-in-production-e-bot7][Haskell in production: e-bot7]]. ~ Gints Dreimanis. #Haskell #FunctionalProgramming
++ [[https://www.6d03.info/posts/2022-12-12-intrinsically-typed.html][Intrinsically typed ASTs]]. ~ Björn Gohla (@6d03). #Haskell #FunctionalProgramming
+
 *** 15-Dic-22
 + [[https://backend.orbit.dtu.dk/ws/portalfiles/portal/299069083/ACIIDS_2022.pdf][On verified automated reasoning in propositional logic]]. ~ Simon Tobias Lund, Jørgen Villadsen. #ITP #IsabelleHOL #Logic #Math
 + [[https://hal.inria.fr/hal-03891390/document][A computational Cantor-Bernstein and Myhill’s isomorphism theorem in constructive type theory]]. ~ Yannick Forster, Felix Jahn, Gert Smolka. #ITP #Coq #Math
